[package]
name = "fe-parser-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.fe-parser]
path = ".."

[dependencies.fe-common]
path = "../../common"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "parse_file"
path = "fuzz_targets/parse_file.rs"
test = false
doc = false
